--- a/forms/EditAgentDialog.ui
+++ b/forms/EditAgentDialog.ui
@@ -10,6 +10,12 @@
     <height>500</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>500</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Edit Agent</string>
   </property>
@@ -92,9 +98,6 @@
        <property name="columnCount">
         <number>4</number>
        </property>
-       <attribute name="verticalHeaderVisible">
-        <bool>true</bool>
-       </attribute>
        <attribute name="verticalHeaderVisible">
         <bool>true</bool>
        </attribute>
