--- a/forms/TransactionsDialog.ui
+++ b/forms/TransactionsDialog.ui
@@ -10,6 +10,12 @@
     <height>641</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>641</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Transactions</string>
   </property>
