--- a/forms/CreateAgentDialog.ui
+++ b/forms/CreateAgentDialog.ui
@@ -13,6 +13,12 @@
     <height>242</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>242</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Create Agent</string>
   </property>
