--- a/forms/DaybookAllAgentsDialog.ui
+++ b/forms/DaybookAllAgentsDialog.ui
@@ -10,6 +10,12 @@
     <height>500</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>500</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Daybook All Agents</string>
   </property>
