--- a/forms/EditDebtorDialog.ui
+++ b/forms/EditDebtorDialog.ui
@@ -10,6 +10,12 @@
     <height>615</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>615</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Edit Debtor</string>
   </property>
